// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /mentoringPropositions MentoringPropositions_200 1`] = `
Object {
  "data": Array [
    Object {
      "comment": "test",
      "createdAt": Any<String>,
      "deletedAt": null,
      "id": Any<Number>,
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /mentoringPropositions/:id MentoringPropositions_200 1`] = `
Object {
  "campaign": null,
  "comment": "test",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "internship": null,
  "mentor": null,
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/campaigns MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/internships MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "postalCode": null,
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/mentors MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions ValidMentoringPropositions_200 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/campaigns/:internship_type_id/link MentoringPropositions_200_WithBusiness 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/internships/:internship_type_id/link MentoringPropositions_200_WithInternship 1`] = `
Object {
  "additional": null,
  "address": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "postalCode": null,
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/mentors/:mentor_id/link MentoringPropositions_200_WithMentor 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /mentoringPropositions/:id MentoringPropositions_200_NotAnyDataUpdated 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /mentoringPropositions/:id MentoringPropositions_200_UpdateAllData 1`] = `
Object {
  "comment": "additional data",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;
